...
                    containerColor = Color.White,
                ),
                actions = {
                    IconButton(onClick = { navigateToSettings() }) {
                        Icon(
                            Icons.Default.Settings, 
                            contentDescription = "Settings",
                            tint = Color.Black
                        )
                    }
                }
            )
        },
...
